--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:a1qllgtKTXXA1Eno4BOb+M1+p3ovGpx2xMEB50+nlZo=
+APP_KEY=base64:/6nbXp1EZcCPjdaIiiuNW5RF3j49pLk4U0WYQ+DQg7g=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=notification
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
@@ -31,8 +31,8 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=689394
-PUSHER_APP_KEY=5631d71c32c0b9117a88
-PUSHER_APP_SECRET=e28a148dda8d5f623472
+PUSHER_APP_KEY=354b5cbfc52ef4d1a5ba
+PUSHER_APP_SECRET=0d71315dac4073b1c983
 PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
